# visionbridge

./: CMakeLists.txt  LICENSE  README.md  build_cmake.sh  build_meson.sh  meson.build
common/: config.h  config_loader.cpp  config_loader.h  logger.cpp  logger.h  pipeline_stats.h  protocol.h  time_utils.h
configs/: render.json  source.json
render/: display_output.cpp  display_output.h  display_output_base.cpp  display_output_base.h  display_output_egl.cpp  display_output_egl.h  display_output_sdl.cpp  display_output_sdl.h  display_output_wl_egl.cpp  display_output_wl_egl.h  main.cpp  render_node.cpp  render_node.h  stream_decoder.cpp  stream_decoder.h
source/: capture_pipeline.cpp  capture_pipeline.h  main.cpp  mog2_tracker.cpp  mog2_tracker.h  source_node.cpp  source_node.h  stub_tracker.cpp  stub_tracker.h  tracker.h  yolo_tracker.cpp  yolo_tracker.h
